# rust-book-exercices

./: .gitignore  README.md
The_Rust_Programming_Language/00_hello_world/: ex_args.rs
The_Rust_Programming_Language/02_guessing_game/: Cargo.toml  readme.md
The_Rust_Programming_Language/02_guessing_game/src/: main.rs
The_Rust_Programming_Language/03_common_programming_concepts/a0_mutability/: Cargo.toml
The_Rust_Programming_Language/03_common_programming_concepts/a0_mutability/src/: main.rs
The_Rust_Programming_Language/03_common_programming_concepts/a1_data_types/: Cargo.toml
The_Rust_Programming_Language/03_common_programming_concepts/a1_data_types/src/: main.rs
The_Rust_Programming_Language/03_common_programming_concepts/a2_functions/: Cargo.toml
The_Rust_Programming_Language/03_common_programming_concepts/a2_functions/src/: main.rs
The_Rust_Programming_Language/aa_hello_cargo/: Cargo.toml
The_Rust_Programming_Language/guessing_game/: Cargo.toml
The_Rust_Programming_Language/guessing_game/src/: main.rs
examples/aa_borrow_checker/: Cargo.toml
examples/aa_borrow_checker/src/: main.rs
examples/clean_rust/: Cargo.toml
examples/clean_rust/src/: application.rs  domain.rs  infrastructure.rs  main.rs
examples/ex_cached_docker/: Cargo.toml  Dockerfile  Makefile  build.rs
examples/ex_cached_docker/src/: build_info.rs  main.rs
examples/lock_tree-main/: .gitignore  Cargo.toml  README.md
examples/lock_tree-main/src/: lib.rs  relation.rs
rust_tutorial/src/: main.rs
rust_tutorial/src/restaurant/: mod.rs
(+6 files in other folders)
